Feat: 수정된 로직에 맞춰 로그인/회원정보 확인/게시글 조회/게시글 추가